k8-configuration/pipeline_creation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-creation
  labels:
    app: pipeline-creation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline-creation
  template:
    metadata:
      labels:
        app: pipeline-creation
    spec:
      containers:
      - name: pipeline-creation
        image: rohitkatlaa/dataline_pipeline_creation:latest
        command: ["./docker-entrypoint.sh"]
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: pipeline-creation-service
spec:
  selector:
    app: pipeline-creation
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
