k8-configuration/pipeline_creation_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-creation-service
  namespace: dataline
spec:
  selector:
    app: pipeline-creation
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
