k8-configuration/pipeline_execution.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-execution
  labels:
    app: pipeline-execution
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline-execution
  template:
    metadata:
      labels:
        app: pipeline-execution
    spec:
      containers:
      - name: pipeline-execution
        image: rohitkatlaa/dataline_pipeline_execution:latest
        command: ["./docker-entrypoint.sh"]
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: pipeline-execution-service
spec:
  selector:
    app: pipeline-execution  
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
