k8-configuration/pipeline_execution_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-execution-service
  namespace: dataline
spec:
  selector:
    app: pipeline-execution  
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
