k8-configuration/dataline_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataline-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: datalinecreation.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipeline-creation-service
                port:
                  number: 8001
    - host: datalineexecution.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipeline-execution-service
                port:
                  number: 8002
